@@ -1,3 +1,9 @@
+2008-01-23  Ian Beckwith  <ianb@erislabs.net>
+
+	* Update gnulib to 20080123 commit 16c6ed60fb
+	  (including MacOS setenv fix)
+	* gitfm/gitps/gitview/gitwhich: add program_name global for lib/error.c
+
 2008-01-22  Ian Beckwith  <ianb@erislabs.net>
 
 	* Release gnuit 4.9.2
